fix(street): fix street issue with richest position, remove hardcode value for firefox, fix issue with z-index

--- a/src/matrix/matrix.css
+++ b/src/matrix/matrix.css
@@ -110,7 +110,6 @@ matrix-images {
 
   .street-container.fixed {
     position: fixed;
-    z-index: 999;
     top: 0;
   }
 
